sIBL_GUI - 2.0.0 - Change Log -
- Help / Manual File has been Updated.
- Refinements in sIBL_GUI UI.
- Trapped some errors if loader script failed.
- Corrected an error in sIBL_Framework introduced while reorganising Imports.
- GPS Map Markers weren't properly resized while using the keyboard shortcuts to zoom in and out.
- Cleaned a bit the Collection ListWidget ToolTips V2 Support Code.

- External Tools Updates.

--- a/src/Releases/sIBL_GUI_Releases.rc
+++ b/src/Releases/sIBL_GUI_Releases.rc
@@ -1,15 +1,15 @@
 [sIBL_GUI]
-Release = 1.9.1
-Type = "Nightly"
+Release = 2.0.0
+Type = "Stable"
 
 [XSI_MR]
 Release = 1.4.0
-Type = "Nightly"
+Type = "Stable"
 Comment = "This Is XSI Mental Ray Template !"
 
 [Maya_MR]
 Release = 1.4.0
-Type = "Nightly"
+Type = "Stable"
 Comment = "This Is Maya Mental Ray Template !"
 
 [3dsMax_MR]
