--- a/src/Releases/sIBL_GUI_Releases.rc
+++ b/src/Releases/sIBL_GUI_Releases.rc
@@ -1,5 +1,5 @@
 [sIBL_GUI]
-Release = 2.0.0
+Release = 2.0.1
 Type = "Stable"
 
 [XSI_MR]
@@ -8,7 +8,7 @@ Type = "Stable"
 Comment = "This Is XSI Mental Ray Template !"
 
 [Maya_MR]
-Release = 1.4.6
+Release = 1.4.7
 Type = "Stable"
 Comment = "This Is Maya Mental Ray Template !"
 
@@ -16,6 +16,11 @@ Comment = "This Is Maya Mental Ray Template !"
 Release = 0.9.2
 Type = "Nightly"
 Comment = "This Is VRay For Maya Template ! ( Notice That This Template Is Beta ! )"
+
+[Maya_Turtle]
+Release = 0.5.0
+Type = "Nightly"
+Comment = "This Is Maya Turtle Template ! ( Notice That This Template Is Alpha ! )"
 
 [3dsMax_MR]
 Release = 0.9.5
