--- a/src/Releases/sIBL_GUI_Releases.rc
+++ b/src/Releases/sIBL_GUI_Releases.rc
@@ -8,14 +8,14 @@ Type = "Stable"
 Comment = "This Is XSI Mental Ray Template !"
 
 [Maya_MR]
-Release = 1.4.7
+Release = 1.5.0
 Type = "Stable"
 Comment = "This Is Maya Mental Ray Template !"
 
 [Maya_VRay]
-Release = 0.9.3
-Type = "Nightly"
-Comment = "This Is VRay For Maya Template ! ( Notice That This Template Is Beta ! )"
+Release = 1.0.0
+Type = "Stable"
+Comment = "This Is VRay For Maya Template !"
 
 [Maya_Turtle]
 Release = 0.5.0
