--- a/src/Releases/sIBL_GUI_Releases.rc
+++ b/src/Releases/sIBL_GUI_Releases.rc
@@ -8,19 +8,19 @@ Type = "Stable"
 Comment = "This Is XSI Mental Ray Template !"
 
 [Maya_MR]
-Release = 1.5.0
+Release = 1.5.1
 Type = "Stable"
 Comment = "This Is Maya Mental Ray Template !"
 
 [Maya_VRay]
-Release = 1.0.0
+Release = 1.0.1
 Type = "Stable"
 Comment = "This Is VRay For Maya Template !"
 
 [Maya_Turtle]
-Release = 0.5.0
-Type = "Nightly"
-Comment = "This Is Maya Turtle Template ! ( Notice That This Template Is Alpha ! )"
+Release = 1.0.0
+Type = "Stable"
+Comment = "This Is Maya Turtle Template !"
 
 [3dsMax_MR]
 Release = 0.9.5
