sIBL_GUI - 2.0.2 - Change Log -
- Maya_VRay_DLight.sIBLT Is Available As A Stable Release.
- Created Maya_VRay_DLight Template Manual / Help Files.
- Templates Code Formatting.
- Updated Versions Numbers.

--- a/src/Releases/sIBL_GUI_Releases.rc
+++ b/src/Releases/sIBL_GUI_Releases.rc
@@ -17,6 +17,11 @@ Release = 1.0.1
 Type = "Stable"
 Comment = "This Is VRay For Maya Template !"
 
+[Maya_VRay_DLight]
+Release = 1.0.0
+Type = "Stable"
+Comment = "This Is VRay For Maya Dome Light Template !"
+
 [Maya_Turtle]
 Release = 1.0.0
 Type = "Stable"
