--- a/src/Releases/sIBL_GUI_Releases.rc
+++ b/src/Releases/sIBL_GUI_Releases.rc
@@ -3,8 +3,8 @@ Release = 2.0.8
 Type = "Stable"
 
 [XSI_MR]
-Release = 1.4.3
-Type = "Stable"
+Release = 1.5.0
+Type = "Nightly"
 Comment = "This Is XSI Mental Ray Template !"
 
 [Maya_MR]
