sIBL_GUI - 2.0.9 - Change Log -
- Enabled Pass(es) Linear Workflow in XSI_MR.sIBLT, Updated Versions Numbers.

--- a/src/Releases/sIBL_GUI_Releases.rc
+++ b/src/Releases/sIBL_GUI_Releases.rc
@@ -3,9 +3,9 @@ Release = 2.0.8
 Type = "Stable"
 
 [XSI_MR]
-Release = 1.5.2
+Release = 1.5.3
 Type = "Stable"
-Comment = "This Is XSI Mental Ray Template ! ( Code Refactoring )"
+Comment = "This Is XSI Mental Ray Template ! ( Enabled Pass(es) Linear Workflow )"
 
 [Maya_MR]
 Release = 1.6.8
