--- a/src/Releases/sIBL_GUI_Releases.rc
+++ b/src/Releases/sIBL_GUI_Releases.rc
@@ -28,9 +28,9 @@ Type = "Stable"
 Comment = "Maya Turtle Template : Corrected Drawing Overrides Preventing Rendering."
 
 [Maya_RfM]
-Release = 1.0.1
+Release = 1.0.2
 Type = "Stable"
-Comment = "Renderman For Maya Template : Nicer Drawing Overrides."
+Comment = "Renderman For Maya Template : Color Bleeding Option Added."
 
 [3dsMax_MR]
 Release = 0.9.5
