--- a/src/Releases/sIBL_GUI_Releases.rc
+++ b/src/Releases/sIBL_GUI_Releases.rc
@@ -10,27 +10,27 @@ Comment = "XSI Mental Ray Template : Enabled Pass(es) Linear Workflow."
 [Maya_MR]
 Release = 1.6.9
 Type = "Stable"
-Comment = "Maya Mental Ray Template : Code Refactoring."
+Comment = "Maya Mental Ray Template : FeedBack RenderStats."
 
 [Maya_VRay]
 Release = 1.1.3
 Type = "Stable"
-Comment = "VRay For Maya Template : Code Refactoring."
+Comment = "VRay For Maya Template : FeedBack RenderStats."
 
 [Maya_VRay_DLight]
 Release = 1.1.3
 Type = "Stable"
-Comment = "VRay For Maya Dome Light Template : Code Refactoring."
+Comment = "VRay For Maya Dome Light Template : FeedBack RenderStats."
 
 [Maya_Turtle]
 Release = 1.1.5
 Type = "Stable"
-Comment = "Maya Turtle Template : Corrected Drawing Overrides Preventing Rendering."
+Comment = "Maya Turtle Template : FeedBack RenderStats."
 
 [Maya_RfM]
 Release = 1.0.3
 Type = "Stable"
-Comment = "Renderman For Maya Template : Color Bleeding Option Added."
+Comment = "Renderman For Maya Template : FeedBack RenderStats."
 
 [3dsMax_MR]
 Release = 0.9.6
