--- a/src/Releases/sIBL_GUI_Releases.rc
+++ b/src/Releases/sIBL_GUI_Releases.rc
@@ -3,46 +3,46 @@ Release = 2.1.1
 Type = "Stable"
 
 [XSI_MR]
-Release = 1.5.4
+Release = 1.5.6
 Type = "Stable"
-Comment = "XSI Mental Ray Template : Enabled Pass(es) Linear Workflow."
+Comment = "XSI Mental Ray Template : Added Renderer Attribute."
 
 [Maya_MR]
-Release = 1.6.9
+Release = 1.7.0
 Type = "Stable"
-Comment = "Maya Mental Ray Template : Code Refactoring."
+Comment = "Maya Mental Ray Template : Added Renderer Attribute."
 
 [Maya_VRay]
-Release = 1.1.3
+Release = 1.1.4
 Type = "Stable"
-Comment = "VRay For Maya Template : Code Refactoring."
+Comment = "VRay For Maya Template : Added Renderer Attribute."
 
 [Maya_VRay_DLight]
-Release = 1.1.3
+Release = 1.1.4
 Type = "Stable"
-Comment = "VRay For Maya Dome Light Template : Code Refactoring."
+Comment = "VRay For Maya Dome Light Template : Added Renderer Attribute."
 
 [Maya_Turtle]
-Release = 1.1.5
+Release = 1.1.6
 Type = "Stable"
-Comment = "Maya Turtle Template : Corrected Drawing Overrides Preventing Rendering."
+Comment = "Maya Turtle Template : Added Renderer Attribute."
 
 [Maya_RfM]
-Release = 1.0.3
+Release = 1.0.4
 Type = "Stable"
-Comment = "Renderman For Maya Template : Color Bleeding Option Added."
+Comment = "Renderman For Maya Template : Added Renderer Attribute."
 
 [3dsMax_MR]
 Release = 0.9.7
 Type = "Nightly"
-Comment = "3dsMax Mental Ray Base Template : Dschaga Code Refactoring And Patch."
+Comment = "3dsMax Mental Ray Base Template : Added Renderer Attribute."
 
 [3dsMax_Scanline]
 Release = 0.9.7
 Type = "Nightly"
-Comment = "3dsMax Scanline Ray Base Template : Dschaga Code Refactoring And Patch."
+Comment = "3dsMax Scanline Ray Base Template : Added Renderer Attribute."
 
 [3dsMax_VRay]
 Release = 0.9.7
 Type = "Nightly"
-Comment = "3dsMax VRay Base Template : Dschaga Code Refactoring And Patch."
+Comment = "3dsMax VRay Base Template : Added Renderer Attribute."
